packages/build/tests/error/fixtures/exception_props/plugin.js
export const onPreBuild = function () {
  const error = new Error('test')
  error.test = true
  error.type = 'test'
  throw error
}
